<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/epos_position_adjustment">
    <com.hisense.storemode.widget.RadioButtonPreference
        android:key="@string/key_epos_position_left"
        android:title="@string/position_left" />
    <com.hisense.storemode.widget.RadioButtonPreference
        android:key="@string/key_epos_position_top"
        android:title="@string/position_top" />
    <com.hisense.storemode.widget.RadioButtonPreference
        android:key="@string/key_epos_position_right"
        android:title="@string/position_right" />

    <com.hisense.storemode.widget.RadioButtonPreference
        android:key="@string/key_epos_position_bottom"
        android:title="@string/position_bottom" />
    <!--<com.hisense.storemode.widget.RadioPreference-->
    <!--android:key="123"-->
    <!--android:title="radio1"-->
    <!--/>-->
    <!--<com.hisense.storemode.widget.RadioPreference-->
    <!--android:key="1234"-->
    <!--android:title="radio2"-->
    <!--android:widgetLayout="@layout/radio_button_preference" />-->
</PreferenceScreen>