<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="720dp"
        android:layout_height="150dp"
        android:background="@drawable/guide_poweron_bg"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/energy_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_summary_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_below="@+id/tv_title"
            android:text="@string/energy_summary_one"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_summary_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_summary_one"
            android:gravity="left"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="#FFFFFF"
            android:text="@string/energy_summary_two"
            android:textSize="18sp" />


    </RelativeLayout>
</LinearLayout>